--- a/Views/Home/AddOrUpdateRecipe.cshtml
+++ b/Views/Home/AddOrUpdateRecipe.cshtml
@@ -16,7 +16,7 @@
         //receipt = await recipeRepository.GetRecipeByIdAsync(Model);
     }
 }
-@section Styles{
+@*@section Styles{
         <style>
             .select2-selection--single {
                 height: 2.5rem !important;
@@ -65,7 +65,7 @@
                 align-items: center;
                 }
         </style>
-}
+}*@
 <div class="content-body ">
     <!-- row -->
     <div class="container-fluid">
@@ -307,7 +307,7 @@
         </div>
     </div>
 </div>
-@section Script{
+@section Scripts{
         <script src="~/js/controller/add-recipe.js"></script>
 }
 
