--- a/Views/Shared/Components/SomeCategory/Default.cshtml
+++ b/Views/Shared/Components/SomeCategory/Default.cshtml
@@ -18,7 +18,7 @@
 
                         <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">@Model.Name</h4>
                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="@Url.Action("Category", new {id = Model.Id})">
+                                <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="@Url.Action("Category","Home", new {id = Model.Id})">
                                 Discover recipes 🡥
                             </a>
                         </div>
