--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -1030,7 +1030,7 @@
                                         <div class="elementor-element elementor-element-6f92711 elementor-view-default elementor-widget elementor-widget-icon" data-id="6f92711" data-element_type="widget" data-widget_type="icon.default">
                                             <div class="elementor-widget-container">
                                                 <div class="elementor-icon-wrapper">
-                                                    <a class="elementor-icon " href="#">
+                                                    <a class="elementor-icon " href="/Home/Search">
                                                         <i class="fa-solid fa-magnifying-glass" style="font-size: 20px"></i>
                                                     </a>
                                                 </div>
