--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Project3.Repository
 @using Project3.DTO
 @inject IRecipeRepository recipeRepository;
-
+@model List<Recipe>;
 
 @{
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
@@ -13,10 +13,193 @@
     //    var model = Model;
     //}
 
-
 }
 <div data-elementor-type="wp-post" data-elementor-id="713" class="elementor elementor-713">
-   
+    <section class="elementor-section elementor-top-section elementor-element elementor-element-ddc230f elementor-section-boxed elementor-section-height-default elementor-section-height-default" style="
+             margin-top: 150px; margin-bottom:130px;" data-id="ddc230f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+        <div class="elementor-background-overlay"></div>
+        <div class="elementor-container elementor-column-gap-default">
+            <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-854349d" style="display: flex;justify-content: center;" data-id="854349d" data-element_type="column">
+                <div class="elementor-widget-wrap elementor-element-populated" style="text-align:center;width:50%">
+                    <div class="elementor-element elementor-element-2f90e90 elementor-invisible elementor-widget elementor-widget-heading" data-id="2f90e90" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;rubberBand&quot;}" data-widget_type="heading.default">
+                        <div class="elementor-widget-container">
+                            <style>
+                                /*! elementor - v3.15.0 - 09-08-2023 */
+                                .elementor-heading-title {
+                                    padding: 0;
+                                    margin: 0;
+                                    line-height: 1
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title[class*=elementor-size-] > a {
+                                    color: inherit;
+                                    font-size: inherit;
+                                    line-height: inherit
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title.elementor-size-small {
+                                    font-size: 15px
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title.elementor-size-medium {
+                                    font-size: 19px
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title.elementor-size-large {
+                                    font-size: 29px
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title.elementor-size-xl {
+                                    font-size: 39px
+                                }
+
+                                .elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
+                                    font-size: 59px
+                                }</style>
+                                
+                                
+                                <h2 class="elementor-heading-title elementor-size-default">What are your favorite food?</h2>
+                        </div>
+                    </div>
+                    <div class="elementor-element elementor-element-9897069 elementor-invisible elementor-widget elementor-widget-text-editor" data-id="9897069" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="text-editor.default">
+                        <div class="elementor-widget-container">
+                            <style>
+                                /*! elementor - v3.15.0 - 09-08-2023 */
+                                .elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap {
+                                    background-color: #69727d;
+                                    color: #fff
+                                }
+
+                                .elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap {
+                                    color: #69727d;
+                                    border: 3px solid;
+                                    background-color: transparent
+                                }
+
+                                .elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap {
+                                    margin-top: 8px
+                                }
+
+                                .elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter {
+                                    width: 1em;
+                                    height: 1em
+                                }
+
+                                .elementor-widget-text-editor .elementor-drop-cap {
+                                    float: left;
+                                    text-align: center;
+                                    line-height: 1;
+                                    font-size: 50px
+                                }
+
+                                .elementor-widget-text-editor .elementor-drop-cap-letter {
+                                    display: inline-block
+                                }</style>				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                        </div>
+                    </div>
+                    <div class="elementor-element elementor-element-0259671 elementor-search-form--skin-classic elementor-search-form--button-type-icon elementor-search-form--icon-search elementor-invisible elementor-widget elementor-widget-search-form" data-id="0259671" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;skin&quot;:&quot;classic&quot;}" data-widget_type="search-form.default">
+                        <div class="elementor-widget-container">
+                            <form class="elementor-search-form" role="search" action="/Recipe/SearchRecipes" method="get">
+                                <div class="elementor-search-form__container">
+                                    <input placeholder="Search..." class="elementor-search-form__input" style="padding-left: 13px;" type="search" name="keyword" title="Search" value="">
+                                    <button class="elementor-search-form__submit" style="width: 55px;border-radius: 6px; background-color: var(--e-global-color-d49ac81 );" type="submit" title="Search" aria-label="Search">
+                                        <div class="e-font-icon-svg-container"><svg class="fa fa-search e-font-icon-svg e-fas-search" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></div>							<span class="elementor-screen-only">Search</span>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="elementor-element elementor-element-ec3e63d elementor-widget elementor-widget-heading" data-id="ec3e63d" data-element_type="widget" data-widget_type="heading.default">
+                        <div class="elementor-widget-container">
+                            <h6 class="elementor-heading-title elementor-size-default">Popular search</h6>
+                        </div>
+                    </div>
+
+
+                    <div class="category-list-opt" style="width: 100%;display: flex;flex-wrap: wrap;justify-content: center;padding-left: 0px;gap: 14px;">
+                        <div class="elementor-element elementor-element-557d8ab elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="557d8ab" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#Chicken Recipes</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-79ddf49 elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="79ddf49" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#Roast Duck</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-fa05bf4 elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="fa05bf4" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#Rendang</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-9a3ab64 elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="9a3ab64" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#shrimp</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-a288b3e elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="a288b3e" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#dessert</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-3aad76d elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="3aad76d" data-element_type="widget" data-widget_type="button.default">
+                            <div class="elementor-widget-container">
+                                <div class="elementor-button-wrapper">
+                                    <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                        <span class="elementor-button-content-wrapper">
+                                            <span class="elementor-button-text">#carne picada</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-1f65608 elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="1f65608" data-element_type="widget" data-widget_type="button.default">
+                        <div class="elementor-widget-container">
+                            <div class="elementor-button-wrapper">
+                                <a class="elementor-button elementor-button-link elementor-size-xs" href="#">
+                                    <span class="elementor-button-content-wrapper">
+                                        <span class="elementor-button-text">#gado-gado</span>
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="elementor-section elementor-top-section elementor-element elementor-element-e0fd804 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="e0fd804" data-element_type="section">
         <div class="elementor-container elementor-column-gap-default ">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-167ed45" data-id="167ed45" data-element_type="column">
@@ -101,7 +284,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section >
         <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-456c9e5" data-id="456c9e5" data-element_type="column">
                 <div class="elementor-widget-wrap elementor-element-populated">
@@ -859,7 +1042,7 @@
                                         <input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="First Name">
                                     </div>
                                     <div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_85442b9 elementor-col-50" style="
-
+   
                                          padding-bottom: 10px;">
                                         <label for="form-field-field_85442b9" class="elementor-field-label">
                                             Last Name
@@ -914,7 +1097,7 @@
                     </section>
                     <div class="elementor-element elementor-element-e86013a elementor-grid-4 elementor-grid-tablet-2 elementor-grid-mobile-1 elementor-posts--thumbnail-top elementor-widget elementor-widget-posts" data-id="e86013a" data-element_type="widget" data-settings="{&quot;classic_columns&quot;:&quot;4&quot;,&quot;classic_row_gap&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:21,&quot;sizes&quot;:[]},&quot;classic_columns_tablet&quot;:&quot;2&quot;,&quot;classic_columns_mobile&quot;:&quot;1&quot;,&quot;classic_row_gap_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;classic_row_gap_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="posts.classic">
                         <div class="elementor-widget-container">
-                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-posts.min.css">
+                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-posts.min.css">	
                             <div class="elementor-posts-container elementor-posts elementor-posts--skin-classic elementor-grid" style="display: flex;gap: 20px;">
                                 <article class="elementor-post elementor-grid-item post-80 post type-post status-publish format-standard has-post-thumbnail hentry category-kitchen-tips tag-cooking tag-food tag-kitchen tag-recipes">
                                     <a class="elementor-post__thumbnail__link" href="https://point.moxcreative.com/yumma/2022/04/09/how-to-peel-hard-boiled-eggs-perfectly-every-single-time/">
