--- a/Views/Admin/RecipesByAdmin.cshtml
+++ b/Views/Admin/RecipesByAdmin.cshtml
@@ -5,6 +5,15 @@
     var recipes = await recipeRepository.GetAllAsync();
     recipes = recipes.Where(r => r.IsDeleted != true).ToList();
 }
+@section styles{
+    <style>
+        .container-fluid img{
+             width: 150px; 
+             height: 150px; 
+            object-fit: fill;
+        }
+    </style>
+}
 
 <div class="content-body ">
     <div class="container-fluid">
