--- a/Views/Home/AddOrUpdateRecipe.cshtml
+++ b/Views/Home/AddOrUpdateRecipe.cshtml
@@ -16,59 +16,13 @@
         //receipt = await recipeRepository.GetRecipeByIdAsync(Model);
     }
 }
-@*@section Styles{
-        <style>
-            .select2-selection--single {
-                height: 2.5rem !important;
-            }
+@section css{
+    <link rel="stylesheet" href="~/css/style.css" />
+}
 
-            .select2-item {
-                width: 100px
-            }
-
-            .recipe-template {
-                display: none
-            }
-
-            #image-container {
-                display: flex;
-                flex-wrap: wrap;
-            }
-
-                #image-container div {
-                position: relative;
-                margin: 10px;
-            }
-
-            #image-container img {
-                width: 100px;
-                height: 100px;
-                /*width: 100%;*/
-                -webkit-transition: all 0.5s;
-                -ms-transition: all 0.5s;
-                transition: all 0.5s;
-            }
-
-            #image-container button {
-                position: absolute;
-                top: 0;
-                right: 0;
-                padding: 5px;
-                color: white;
-                border: none;
-                cursor: pointer;
-                border-radius: 50%; /* Thêm thuộc tính border-radius để làm tròn nút */
-                width: 24px; /* Đặt kích thước chiều rộng */
-                height: 24px; /* Đặt kích thước chiều cao */
-                display: flex; /* Sử dụng flexbox để căn giữa */
-                justify-content: center; /* Căn giữa theo chiều ngang */
-                align-items: center;
-                }
-        </style>
-}*@
 <div class="content-body ">
     <!-- row -->
-    <div class="container-fluid">
+    <div>
         <div class="me-auto d-none d-lg-block mb-3">
             <a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
                 <svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -299,7 +253,8 @@
                         }
                         else
                         {
-                                <button type="submit" class="btn btn-primary save-recipe" style="float: right;">Add</button>
+                            <button type="submit" class="btn btn-primary save-recipe" style="float: right;">Add</button>
+                            
                         }
                     </form>
                 </div>
@@ -309,6 +264,15 @@
 </div>
 @section Scripts{
         <script src="~/js/controller/add-recipe.js"></script>
+    <script src="~/vendor/global/global.min.js" type="text/javascript"></script>
+    @*<script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>*@
+    <script src="~/vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
+    <script src="~/vendor/apexchart/apexchart.js" type="text/javascript"></script>
+    <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
+    <script src="~/js/custom.min.js" type="text/javascript"></script>
+    <script src="~/js/deznav-init.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="~/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
 }
 
 
