--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -14,6 +14,7 @@
 <head>
     @RenderSection("css", false)
     @RenderSection("Script", required: false)
+    @await RenderSectionAsync("Styles", required: false)
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
@@ -1632,8 +1633,8 @@
         var ekit_config = { "ajaxurl": "https:\/\/point.moxcreative.com\/yumma\/wp-admin\/admin-ajax.php", "nonce": "6628911249" };
     </script>
     <script src='~/wp-content/plugins/elementskit-lite/widgets/init/assets/js/elementor5b0a.js?ver=2.9.0' id='elementskit-elementor-js'></script>
-    <script src='~/js/site.js' id='elementskit-elementor-js'></script>
     @await RenderSectionAsync("Scripts", required: false)
+   
 </body>
 
 <!-- Mirrored from point.moxcreative.com/yumma/template-kit/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 31 Aug 2023 09:38:42 GMT -->
