--- a/Views/Home/SingleRecipe.cshtml
+++ b/Views/Home/SingleRecipe.cshtml
@@ -342,7 +342,47 @@
 							</div>
 						</div>
 					</section>
-					
+					<section style="border :double; width:70%;">
+						<div class="elementor-container elementor-column-gap-default">
+							<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9488283" data-id="9488283" data-element_type="column">
+								<div class="elementor-widget-wrap elementor-element-populated">
+									<div class="elementor-element elementor-element-e5fc525 elementor-widget elementor-widget-text-editor" data-id="e5fc525" data-element_type="widget" data-widget_type="text-editor.default">
+										<div class="elementor-widget-container">
+											<span style="margin-left:20px">
+												<h6>Nguyễn Văn Hoàn :</h6>
+												<p>Tôi rất thích bài viết này!!!</p>
+												</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="elementor-container elementor-column-gap-default">
+							<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9488283" data-id="9488283" data-element_type="column">
+								<div class="elementor-widget-wrap elementor-element-populated">
+									<div class="elementor-element elementor-element-e5fc525 elementor-widget elementor-widget-text-editor" data-id="e5fc525" data-element_type="widget" data-widget_type="text-editor.default">
+										<div class="elementor-widget-container">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="elementor-element elementor-element-cc59048 elementor-widget elementor-widget-heading" data-id="cc59048" data-element_type="widget" data-widget_type="heading.default" style="margin-left:10px">
+							<div class="elementor-widget-container">
+								<h4 class="elementor-heading-title elementor-size-default">COMMENTS</h4>
+							</div>
+						</div>
+
+						<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9488283" data-id="9488283" data-element_type="column" style=" width: 300px; height: 100px; ">
+							<div class="elementor-widget-wrap elementor-element-populated">
+								<div class="elementor-element elementor-element-e5fc525 elementor-widget elementor-widget-text-editor" data-id="e5fc525" data-element_type="widget" data-widget_type="text-editor.default">
+									<div class="elementor-widget-container">
+										<input type="text" placeholder="Enter Comments" />
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
 					@*<div class="elementor-element elementor-element-754810c elementor-widget elementor-widget-heading" data-id="754810c" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<h4 class="elementor-heading-title elementor-size-default">Note's</h4>
